--- a/src/components/StadiumDetails.module.css
+++ b/src/components/StadiumDetails.module.css
@@ -234,7 +234,7 @@ h1 {
   color: #ffab04;
 } */
 
-.modal {
+/* .modal {
   background-color: #e4ddd4;
   border-radius: 6px;
   border: none;
@@ -243,12 +243,13 @@ h1 {
   width: 80%;
   max-width: 40rem;
   animation: fade-slide-up 0.3s ease-out forwards;
-}
+} */
 
-.modal::backdrop {
+/* .modal::backdrop {
   background-color: rgba(0, 0, 0, 0.55);
-}
+} */
 
+/* 
 @keyframes fade-slide-up {
   from {
     opacity: 0;
@@ -259,4 +260,4 @@ h1 {
     opacity: 1;
     transform: translateY(0);
   }
-}
+} */
