--- a/src/components/StadiumModal.module.css
+++ b/src/components/StadiumModal.module.css
@@ -1,10 +1,22 @@
 .modal {
-    background-color: yellow;
-    align-items: center;
-    display: flex;
-    justify-content: left;
+    top: 20%;
+    border-radius: 6px;
+    padding: 1.5rem;
+    width: 60rem;
+    max-width: 90%;
+    z-index: 2;
 }
 
 .modal h2 {
-    background-color: green;
+    margin-top: 0;
+}
+
+.backdrop {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    background-color: rgba(0, 0, 0, 0.75);
+    z-index: 1;
 }
