--- a/src/components/StadiumModal.module.css
+++ b/src/components/StadiumModal.module.css
@@ -2,9 +2,11 @@
     top: 20%;
     border-radius: 6px;
     padding: 1.5rem;
-    width: 60rem;
+    width: 40rem;
+    height: 30rem;
     max-width: 90%;
-    z-index: 2;
+    z-index: 9;
+    background-color: white;
 }
 
 .modal h2 {
